@@ -1,6 +1,7 @@
 Newest at the top
 YYYY-MM-DD HR:MIN - comment
 
+2016-03-22 12:07 - Fixed dropdowns and "Bookings by Timeslots"
 2016-03-22 12:07 - Indexed three facets onto welcome page. Added incomplete search function.
 2016-03-22 11:26 - Changed days and timeslots.xml to contain all our timetable information
 2016-03-22 11:15 - Changed courses.xml to contain all our courses
